# pos

./: .dockerignore  .gitignore  ARQUITECTURA.md  Cargo.toml  Dockerfile  README.md  dev.ps1  docker-compose.yml  esp32.txt
.cargo-cache-tmp/: .crates.toml  .crates2.json  .global-cache
.sqlx/: query-018a78ebb8b2de3e08ba41ed8e79f03a91c2d73e50d9c2f479af92a9a3326227.json  query-05cc10b903ed03cf0db61d8b0a25c11487e8400c0dba095216722829a6c4403d.json  query-06d3ca4fe6d5ef9495beff795ad284f00935d2f81edf48402aad55d09ccc4154.json  query-07365773e4664e91bf82da97744b921e2c3864244377beb87fdf2ef7737960e8.json  query-0ab578997bd6db184c6cbba10123fcd17097ada3e4e19536d49b58bd83dcf2fa.json  query-0f559ee186ca3e0bbcd4ee5ffb0efd9230c5d39eca4f4f7b93a330ff359e0513.json  query-10be9b74d1e4abffdc5fadf3cd1da12cacd051f62746a2165952a02bb8c69318.json  query-1201774037c6a3e1abd0815d9224a98d9a67668ddace1ab4e43f4a0958f89602.json  query-15069948d5c374eaf9851329d028a4e920c6d8903977ceec64cc46877b141e66.json  query-153afe44cc2725d0801fc3a89de9abcac0224903c527ebfad8bccfe50e9f203c.json  query-1594b8cb11a47bdd5dbd987c63256c42b184ee96344c91e29015b8d0a4704cef.json  query-162487102609418086f20ba2bd3871f8c5b94bd05134a022ee2e591d7bcb28ef.json  query-1641fdfb572f4f9d979b7fd07b36fd840297b2c0492581acc5fa1a099dc6afae.json  query-166cd69667c12ea9737a1b0010a94e0ba0cd52f0464a7b619bca96fc8cbecedb.json  query-168fba6202e7a655e10e9c033204ebb458b24aaa753956a310537c21bf76e8cf.json  query-17513e8b79e98aec40160a64ad427eb9c6b0b785d28572e29adbb7b0983b7299.json  (+168 more)
frontend/: Dockerfile  astro.config.mjs  package-lock.json  (+2 more)
(+126 files in other folders)
