[package]
name = "pos"
version = "0.1.0"
edition = "2021"
description = "Sistema de gestión para kioscos, almacenes y minimercados"

[lib]
name = "pos"
path = "src/lib.rs"

[[bin]]
name = "pos"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "rust_decimal",
    "migrate",
    "json",
] }
uuid = { version = "1", features = ["v7", "serde"] }
rust_decimal = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
argon2 = { version = "0.5", features = ["std"] }
jsonwebtoken = "9"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }

[profile.dev.package.sqlx-macros]
opt-level = 3
